--- a/src/components/sections/education/Education.css
+++ b/src/components/sections/education/Education.css
@@ -34,8 +34,6 @@
 }
 
 #BlobImage img {
-
-
     width: 75px;
     border-radius: 20px;
 
@@ -79,8 +77,21 @@
     float: right;
 }
 
+@media only screen and (max-width: 1360px) {
+    #date {
+        float: left;
+    }
+
+    #BlobImage img {
+        width: 50px;
+    }
+}
+
 #course {
+    margin-top: 12px;
+
     font-size: 18pt;
+    font-weight: bold;
 }
 
 #grade {
